--- a/generic.html
+++ b/generic.html
@@ -77,6 +77,9 @@
 										<label for="email">Email</label>
 										<input name="email" id="email" type="email" placeholder="Email">
 									</div>
+									<form>
+										<input type="button" onclick="alert">
+									</form>
 									<div class="field">
 										<label for="dept">Department</label>
 										<div class="select-wrapper">
