--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 					<li><a href="elements.html">Elements</a></li>
 				</ul>
 			</nav>
+			<p>hello world </p>
+			<p>hello everybody i'm abdullrahman ahmed kabar i'm twenty years old </p>
 
 		<!-- Banner -->
 		<!--
